--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react-native": "^0.483.0",
     "postgres": "^3.4.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
